k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-frontend-prod
  labels:
    app: todo-app-frontend-prod
    tier: frontend
spec:
  selector:
    matchLabels:
      app: todo-app-frontend-prod
      tier: frontend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todo-app-frontend-prod
        tier: frontend
    spec:
      containers:
        - name: todo-app-frontend-prod
          image: mudamudiberkelas/todo-api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend-prod-svc
spec:
  selector:
    app: todo-app-frontend-prod
    tier: frontend
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
  ports:
  - name: todo-app-frontend-prod
    protocol: TCP
    port: 3000
    targetPort: 3000
