k8s/ingress-todo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress-production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: todo.ranah.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-frontend-prod-svc
                port:
                  number: 3000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-prod-svc
                port:
                  number: 4000
